# Lab7

./: CMakeLists.txt
Lab7/: Course.cpp  Course.hpp  courses.txt  main.cpp
